@@ -1,3 +1,5 @@
+
+Dec 04, 2008: libarchive 2.5.903a released
 Nov 09, 2008: libarchive 2.5.902a released
 Nov 08, 2008: libarchive 2.5.901a released
 Nov 08, 2008: Start of pre-release testing for libarchive 2.6
